# GuiCalculator

./: .gitignore  CMakeLists.txt  README.md
gui/: CMakeLists.txt  mainwindow.cpp
gui/widgets/display_panel/dual/: CMakeLists.txt  DualDisplayPanel.cpp  DualDisplayPanel.h
gui/widgets/input_panel/basic/: BasicInputPanel.h  CMakeLists.txt
gui/widgets/memory_panel/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/calculate_core/: CMakeLists.txt  CalculateCore.cpp  CalculateCore.h
src/core/calculate/: CMakeLists.txt  CalculateCore.cpp  CalculateCore.h
src/core/calculate/include/: CalculateCore.h
src/core/calculate/src/: CalculateCore.cpp
src/core/function/: CMakeLists.txt
src/core/function/include/: Function.h
src/core/function/src/: Function.cpp
src/core/memory/: CMakeLists.txt
src/core/memory/include/: Memory.h
src/core/memory/src/: Memory.cpp
src/include/: button.h  error.h  errorCode.h  iniEnumStruct.h  unit.h
src/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/mainwindow/dialog/: dialog.cpp  dialog.h
src/mainwindow/include/: MainWindow.h
src/mainwindow/src/: MainWindow.cpp
src/memory/: CMakeLists.txt  Memory.h
src/widgets/display_panel/dual/: CMakeLists.txt  DualDisplayPanel.cpp  DualDisplayPanel.h
src/widgets/display_panel/dual/include/: DualDisplayPanel.h
src/widgets/display_panel/dual/src/: DualDisplayPanel.cpp
src/widgets/input_panel/basic/: BasicInputPanel.cpp  BasicInputPanel.h  CMakeLists.txt
src/widgets/input_panel/basic/include/: BasicInputPanel.h
src/widgets/input_panel/basic/src/: BasicInputPanel.cpp
src/widgets/input_panel/button/: CMakeLists.txt  button.cpp
src/widgets/input_panel/button/include/: button.h
src/widgets/input_panel/button/src/: button.cpp
src/widgets/memory_panel/: CMakeLists.txt  MemoryPanel.cpp  MemoryPanel.h
test/: CalculateCoreTest.cpp
